--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "css-loader": "^0.28.11",
     "element-ui": "^2.15.0",
     "lib-flexible": "^0.3.2",
+    "postcss-px2rem-exclude": "0.0.6",
+    "vant": "^2.12.6",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
@@ -36,7 +39,7 @@
     "chromedriver": "^2.27.2",
     "copy-webpack-plugin": "^4.0.1",
     "cross-spawn": "^5.0.1",
-    "css-loader": "^0.28.0",
+    "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
