--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@nutui/nutui": "^2.2.13",
+    "axios": "^0.21.1",
     "css-loader": "^0.28.11",
+    "echarts": "^4.1.0",
     "element-ui": "^2.15.0",
     "lib-flexible": "^0.3.2",
     "postcss-px2rem-exclude": "0.0.6",
     "vant": "^2.12.6",
     "vue": "^2.5.2",
+    "vue-axios": "^3.2.4",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
